[B]1.0.6[/B]
- Added Option to Hide Episode Thumbnails
- Removed SideMenu Help Not Needed as Mod of skin
- Added InProgress Banner to Poster View
- Added TVSHows In Progress to Submenu
- Added Original MPAA Ratings
- Added 3D Video Hack Icon
- Added Artwork Downloader to VideoInfo

[B]1.0.5[/B]
- Bugfix missing label2 FileList non Video
- Added Repeat/Shuffle Labels to Music Viz
- Added XBMC Intro Movie Option
- Added No OSD Video on Pause Option
- Added Skin Settings Option to Configure service.skin.widgets
- Added Old Style Confluence Video Player Condition Images & Changed Locations
- Added New Initial Setup Home Menu Items
- Add ClearArt Option to TVShows MediaInfo2 View
- Enable MusicVideos to Use Movie Views
- Replace Music SubMenu Songs with PartyMode

[B]1.0.4[/B]
- Added Requirement service.skin.widgets
- Add option for Random/Suggested items to Home Widget
- Updated language files from Transifex
- Bugfix added return to video playlist command
- Returned Hard Floor Image to all screens except Home
- Add Option to Auto Hide Home Submenus
- Add Option to Hide System Power Button
- Added User Watched/New Banner Option to Poster View
- Watched Symbol made bigger & brighter + toggle option to hide
- Tweaked GlobalSearch visible options could help on Pi

[B]1.0.3[/B]
- Added Info Stats Bar
- Added Home Fanart to Recently Added Lists
- Added Roboto-Bold-Caps font by uNiversal
- Changed Floor to floor.png by uNiversal
- Changed Skin Default Background
- Added Home Support for Music Videos
- Added Wider Home Menu Labels
- Added Logos to MediaInfoView3
- Added ExtraFanArt to MediaInfoView

[B]1.0.2[/B]
- Added Live CD Case as default Music Viz Background
- Added Artist Slideshow Support in Music Viz (New Requirement script.artistslideshow)
- Added Artist Bio to Music OSD
- Added Extra Fanart Option in Music Viz
- Added Animate Fanart Option in Music Viz
- Added Diffuse FanArt Option for Opaque Music Viz
- Added CD Art Option to Music Viz