@@ -9,35 +9,41 @@
 		<control type="button" id="90102">
 			<include>ButtonHomeSubCommonValues</include>
 			<label>342</label>
+			<onclick>SetProperty(SubMenuBackground,$VAR[SubMenuItemBackground],Home)</onclick>
 			<onclick>ActivateWindow(Videos,MovieTitles,return)</onclick>
 			<visible>Library.HasContent(Movies)</visible>
 		</control>
 		<control type="button" id="90103">
 			<include>ButtonHomeSubCommonValues</include>
 			<label>20343</label>
+			<onclick>SetProperty(SubMenuBackground,$VAR[SubMenuItemBackground],Home)</onclick>
 			<onclick>ActivateWindow(Videos,TvShowTitles,return)</onclick>
 			<visible>Library.HasContent(TVShows)</visible>
 		</control>
 		<control type="button" id="90104">
 			<include>ButtonHomeSubCommonValues</include>
 			<label>20389</label>
+			<onclick>SetProperty(SubMenuBackground,$VAR[SubMenuItemBackground],Home)</onclick>
 			<onclick>ActivateWindow(Videos,MusicVideoTitles,return)</onclick>
 			<visible>Library.HasContent(MusicVideos)</visible>
 		</control>
 		<control type="button" id="90105">
 			<include>ButtonHomeSubCommonValues</include>
 			<label>744</label>
+			<onclick>SetProperty(SubMenuBackground,$VAR[SubMenuItemBackground],Home)</onclick>
 			<onclick>ActivateWindow(Videos,Files,return)</onclick>
 		</control>
 		<control type="button" id="90106">
 			<include>ButtonHomeSubCommonValues</include>
 			<label>14022</label>
+			<onclick>SetProperty(SubMenuBackground,$VAR[SubMenuItemBackground],Home)</onclick>
 			<onclick>ActivateWindow(Videos,Root)</onclick>
 			<visible>Library.HasContent(Video)</visible>
 		</control>
 		<control type="button" id="90107">
 			<include>ButtonHomeSubCommonValues</include>
 			<label>24001</label>
+			<onclick>SetProperty(SubMenuBackground,$VAR[SubMenuItemBackground],Home)</onclick>
 			<onclick>ActivateWindow(Videos,Addons,return)</onclick>
 		</control>
 		<control type="image" id="90108">
@@ -55,32 +61,38 @@
 		<control type="button" id="90162">
 			<include>ButtonHomeSubCommonValues</include>
 			<label>31328</label>
+			<onclick>SetProperty(SubMenuBackground,$VAR[SubMenuItemBackground],Home)</onclick>
 			<onclick>ActivateWindow(Videos,RecentlyAddedMovies,return)</onclick>
 		</control>
 		<control type="button" id="90163">
 			<include>ButtonHomeSubCommonValues</include>
 			<label>20434</label>
+			<onclick>SetProperty(SubMenuBackground,$VAR[SubMenuItemBackground],Home)</onclick>
 			<onclick>ActivateWindow(Videos,MovieSets,return)</onclick>
 			<visible>Library.HasContent(MovieSets)</visible>
 		</control>
 		<control type="button" id="90164">
 			<include>ButtonHomeSubCommonValues</include>
 			<label>369</label>
+			<onclick>SetProperty(SubMenuBackground,$VAR[SubMenuItemBackground],Home)</onclick>
 			<onclick>ActivateWindow(Videos,MovieTitles,return)</onclick>
 		</control>
 		<control type="button" id="90165">
 			<include>ButtonHomeSubCommonValues</include>
 			<label>135</label>
+			<onclick>SetProperty(SubMenuBackground,$VAR[SubMenuItemBackground],Home)</onclick>
 			<onclick>ActivateWindow(Videos,MovieGenres,return)</onclick>
 		</control>
 		<control type="button" id="90166">
 			<include>ButtonHomeSubCommonValues</include>
 			<label>20459</label>
+			<onclick>SetProperty(SubMenuBackground,$VAR[SubMenuItemBackground],Home)</onclick>
 			<onclick>ActivateWindow(Videos,MovieTags,return)</onclick>
 		</control>
 		<control type="button" id="90167">
 			<include>ButtonHomeSubCommonValues</include>
 			<label>136</label>
+			<onclick>SetProperty(SubMenuBackground,$VAR[SubMenuItemBackground],Home)</onclick>
 			<onclick>ActivateWindow(VideoLibrary,special://videoplaylists/,return)</onclick>
 		</control>
 		<control type="image" id="90168">
@@ -98,31 +110,37 @@
 		<control type="button" id="90172">
 			<include>ButtonHomeSubCommonValues</include>
 			<label>575</label>
+			<onclick>SetProperty(SubMenuBackground,$VAR[SubMenuItemBackground],Home)</onclick>
 			<onclick>ActivateWindow(Videos,library://video/inprogressshows.xml/,return)</onclick>
 		</control>
 		<control type="button" id="90173">
 			<include>ButtonHomeSubCommonValues</include>
 			<label>31328</label>
+			<onclick>SetProperty(SubMenuBackground,$VAR[SubMenuItemBackground],Home)</onclick>
 			<onclick>ActivateWindow(Videos,RecentlyAddedEpisodes,return)</onclick>
 		</control>
 		<control type="button" id="90174">
 			<include>ButtonHomeSubCommonValues</include>
 			<label>369</label>
+			<onclick>SetProperty(SubMenuBackground,$VAR[SubMenuItemBackground],Home)</onclick>
 			<onclick>ActivateWindow(Videos,TVShowTitles,return)</onclick>
 		</control>
 		<control type="button" id="90175">
 			<include>ButtonHomeSubCommonValues</include>
 			<label>135</label>
+			<onclick>SetProperty(SubMenuBackground,$VAR[SubMenuItemBackground],Home)</onclick>
 			<onclick>ActivateWindow(Videos,TVShowGenres,return)</onclick>
 		</control>
 		<control type="button" id="90176">
 			<include>ButtonHomeSubCommonValues</include>
 			<label>20459</label>
+			<onclick>SetProperty(SubMenuBackground,$VAR[SubMenuItemBackground],Home)</onclick>
 			<onclick>ActivateWindow(Videos,TVShowTags, return)</onclick>
 		</control>		
 		<control type="button" id="90177">
 			<include>ButtonHomeSubCommonValues</include>
 			<label>652</label>
+			<onclick>SetProperty(SubMenuBackground,$VAR[SubMenuItemBackground],Home)</onclick>
 			<onclick>ActivateWindow(Videos,TVShowYears,return)</onclick>
 		</control>
 		<control type="image" id="90178">
@@ -140,41 +158,48 @@
 		<control type="button" id="90112">
 			<include>ButtonHomeSubCommonValues</include>
 			<label>133</label>
+			<onclick>SetProperty(SubMenuBackground,$VAR[SubMenuItemBackground],Home)</onclick>
 			<onclick>ActivateWindow(MusicLibrary,Artists,return)</onclick>
 			<visible>Library.HasContent(Music)</visible>
 		</control>
 		<control type="button" id="90113">
 			<include>ButtonHomeSubCommonValues</include>
 			<label>132</label>
+			<onclick>SetProperty(SubMenuBackground,$VAR[SubMenuItemBackground],Home)</onclick>
 			<onclick>ActivateWindow(MusicLibrary,Albums,return)</onclick>
 			<visible>Library.HasContent(Music)</visible>
 		</control>
 		<control type="button" id="90114">
 			<include>ButtonHomeSubCommonValues</include>
 			<label>589</label>
+			<onclick>SetProperty(SubMenuBackground,$VAR[SubMenuItemBackground],Home)</onclick>
 			<onclick>PlayerControl(PartyMode(music))</onclick>
 			<visible>Library.HasContent(Music)</visible>
 		</control>
 		<control type="button" id="90115">
 			<include>ButtonHomeSubCommonValues</include>
 			<label>744</label>
+			<onclick>SetProperty(SubMenuBackground,$VAR[SubMenuItemBackground],Home)</onclick>
 			<onclick>ActivateWindow(MusicFiles)</onclick>
 		</control>
 		<control type="button" id="90116">
 			<include>ButtonHomeSubCommonValues</include>
 			<label>14022</label>
+			<onclick>SetProperty(SubMenuBackground,$VAR[SubMenuItemBackground],Home)</onclick>
 			<onclick>ActivateWindow(MusicLibrary,root)</onclick>
 			<visible>Library.HasContent(Music)</visible>
 		</control>
 		<control type="button" id="90117">
 			<include>ButtonHomeSubCommonValues</include>
 			<label>24001</label>
+			<onclick>SetProperty(SubMenuBackground,$VAR[SubMenuItemBackground],Home)</onclick>
 			<onclick>ActivateWindow(MusicLibrary,Addons,return)</onclick>
 			<visible>Library.HasContent(Music)</visible>
 		</control>
 		<control type="button" id="90118">
 			<include>ButtonHomeSubCommonValues</include>
 			<label>24001</label>
+			<onclick>SetProperty(SubMenuBackground,$VAR[SubMenuItemBackground],Home)</onclick>
 			<onclick>ActivateWindow(MusicFiles,Addons,return)</onclick>
 			<visible>!Library.HasContent(Music)</visible>
 		</control>
@@ -193,11 +218,13 @@
 		<control type="button" id="90122">
 			<include>ButtonHomeSubCommonValues</include>
 			<label>20077</label>
+			<onclick>SetProperty(SubMenuBackground,$VAR[SubMenuItemBackground],Home)</onclick>
 			<onclick>ActivateWindow(SkinSettings),return</onclick>
 		</control>
 		<control type="button" id="90123">
 			<include>ButtonHomeSubCommonValues</include>
 			<label>31123</label>
+			<onclick>SetProperty(SubMenuBackground,$VAR[SubMenuItemBackground],Home)</onclick>
 			<onclick condition="System.HasAddon(os.openelec.settings)">RunAddon(os.openelec.settings)</onclick>
 			<onclick condition="System.HasAddon(service.openelec.settings)">RunAddon(service.openelec.settings)</onclick>
 			<visible>System.HasAddon(os.openelec.settings) | System.HasAddon(service.openelec.settings)</visible>
@@ -205,21 +232,25 @@
 		<control type="button" id="90124">
 			<include>ButtonHomeSubCommonValues</include>
 			<label>7</label>
+			<onclick>SetProperty(SubMenuBackground,$VAR[SubMenuItemBackground],Home)</onclick>
 			<onclick>ActivateWindow(FileManager)</onclick>
 		</control>
 		<control type="button" id="90125">
 			<include>ButtonHomeSubCommonValues</include>
 			<label>10040</label>
+			<onclick>SetProperty(SubMenuBackground,$VAR[SubMenuItemBackground],Home)</onclick>
 			<onclick>ActivateWindow(AddonBrowser),return</onclick>
 		</control>
 		<control type="button" id="90126">
 			<include>ButtonHomeSubCommonValues</include>
 			<label>13200</label>
+			<onclick>SetProperty(SubMenuBackground,$VAR[SubMenuItemBackground],Home)</onclick>
 			<onclick>ActivateWindow(Profiles)</onclick>
 		</control>
 		<control type="button" id="90127">
 			<include>ButtonHomeSubCommonValues</include>
 			<label>130</label>
+			<onclick>SetProperty(SubMenuBackground,$VAR[SubMenuItemBackground],Home)</onclick>
 			<onclick>ActivateWindow(SystemInfo)</onclick>
 		</control>
 		<control type="image" id="90128">
@@ -237,6 +268,7 @@
 		<control type="button" id="90132">
 			<include>ButtonHomeSubCommonValues</include>
 			<label>13391</label>
+			<onclick>SetProperty(SubMenuBackground,$VAR[SubMenuItemBackground],Home)</onclick>
 			<onclick>SetFocus(9000)</onclick>
 			<onclick>EjectTray()</onclick>
 		</control>
@@ -255,6 +287,7 @@
 		<control type="button" id="90148">
 			<include>ButtonHomeSubCommonValues</include>
 			<label>24001</label>
+			<onclick>SetProperty(SubMenuBackground,$VAR[SubMenuItemBackground],Home)</onclick>
 			<onclick>ActivateWindow(Pictures,Addons,return)</onclick>
 		</control>
 		<control type="image" id="90149">
@@ -272,6 +305,7 @@
 		<control type="button" id="90142">
 			<include>ButtonHomeSubCommonValues</include>
 			<label>19023</label>
+			<onclick>SetProperty(SubMenuBackground,$VAR[SubMenuItemBackground],Home)</onclick>
 			<onclick>ActivateWindow(PVR)</onclick>
 			<onclick>Setfocus(32)</onclick>
 			<onclick>Setfocus(11)</onclick>
@@ -279,6 +313,7 @@
 		<control type="button" id="90143">
 			<include>ButtonHomeSubCommonValues</include>
 			<label>19024</label>
+			<onclick>SetProperty(SubMenuBackground,$VAR[SubMenuItemBackground],Home)</onclick>
 			<onclick>ActivateWindow(PVR)</onclick>
 			<onclick>Setfocus(33)</onclick>
 			<onclick>Setfocus(12)</onclick>
@@ -286,6 +321,7 @@
 		<control type="button" id="90144">
 			<include>ButtonHomeSubCommonValues</include>
 			<label>19163</label>
+			<onclick>SetProperty(SubMenuBackground,$VAR[SubMenuItemBackground],Home)</onclick>
 			<onclick>ActivateWindow(PVR)</onclick>
 			<onclick>Setfocus(34)</onclick>
 			<onclick>Setfocus(13)</onclick>
@@ -293,6 +329,7 @@
 		<control type="button" id="90145">
 			<include>ButtonHomeSubCommonValues</include>
 			<label>19040</label>
+			<onclick>SetProperty(SubMenuBackground,$VAR[SubMenuItemBackground],Home)</onclick>
 			<onclick>ActivateWindow(PVR)</onclick>
 			<onclick>Setfocus(35)</onclick>
 			<onclick>Setfocus(14)</onclick>
@@ -312,26 +349,31 @@
 		<control type="button" id="90182">
 			<include>ButtonHomeSubCommonValues</include>
 			<label>31328</label>
+			<onclick>SetProperty(SubMenuBackground,$VAR[SubMenuItemBackground],Home)</onclick>
 			<onclick>ActivateWindow(Videos,RecentlyAddedMusicVideos,return)</onclick>
 		</control>
 		<control type="button" id="90183">
 			<include>ButtonHomeSubCommonValues</include>
 			<label>369</label>
+			<onclick>SetProperty(SubMenuBackground,$VAR[SubMenuItemBackground],Home)</onclick>
 			<onclick>ActivateWindow(Videos,MusicVideoTitles,return)</onclick>
 		</control>
 		<control type="button" id="90184">
 			<include>ButtonHomeSubCommonValues</include>
 			<label>135</label>
+			<onclick>SetProperty(SubMenuBackground,$VAR[SubMenuItemBackground],Home)</onclick>
 			<onclick>ActivateWindow(Videos,MusicVideoGenres,return)</onclick>
 		</control>
 		<control type="button" id="90185">
 			<include>ButtonHomeSubCommonValues</include>
 			<label>652</label>
+			<onclick>SetProperty(SubMenuBackground,$VAR[SubMenuItemBackground],Home)</onclick>
 			<onclick>ActivateWindow(Videos,MusicVideoYears,return)</onclick>
 		</control>
 		<control type="button" id="90186">
 			<include>ButtonHomeSubCommonValues</include>
 			<label>20459</label>
+			<onclick>SetProperty(SubMenuBackground,$VAR[SubMenuItemBackground],Home)</onclick>
 			<onclick>ActivateWindow(Videos,MusicVideoTags,return)</onclick>
 		</control>
 		<control type="image" id="90187">
@@ -340,8 +382,6 @@
 			<texture border="0,0,0,3">HomeSubEnd.png</texture>
 		</control>
 	</include>	
-	
-	
 	<include name="HomeSubMenuFavourites">
 		<control type="image" id="90191">
 			<width>35</width>
@@ -352,6 +392,7 @@
 		<control type="button" id="90192">
 			<include>ButtonHomeSubCommonValues</include>
 			<label>$INFO[Window(0).Property(favourite.1.name)]</label>
+			<onclick>SetProperty(SubMenuBackground,$VAR[SubMenuItemBackground],Home)</onclick>
 			<onclick>$INFO[Window(0).Property(favourite.1.path)]</onclick>
 			<visible>!IsEmpty(Window(0).Property(favourite.1.name))</visible>
 			<visible>!IsEmpty(Window(0).Property(favourite.1.path))</visible>
@@ -359,6 +400,7 @@
 		<control type="button" id="90193">
 			<include>ButtonHomeSubCommonValues</include>
 			<label>$INFO[Window(0).Property(favourite.2.name)]</label>
+			<onclick>SetProperty(SubMenuBackground,$VAR[SubMenuItemBackground],Home)</onclick>
 			<onclick>$INFO[Window(0).Property(favourite.2.path)]</onclick>
 			<visible>!IsEmpty(Window(0).Property(favourite.2.name))</visible>
 			<visible>!IsEmpty(Window(0).Property(favourite.2.path))</visible>
@@ -367,6 +409,7 @@
 			<include>ButtonHomeSubCommonValues</include>
 			<label>$INFO[Window(0).Property(favourite.3.name)]</label>
 			<onclick>$INFO[Window(0).Property(favourite.3.path)]</onclick>
+			<onclick>SetProperty(SubMenuBackground,$VAR[SubMenuItemBackground],Home)</onclick>
 			<visible>!IsEmpty(Window(0).Property(favourite.3.name))</visible>
 			<visible>!IsEmpty(Window(0).Property(favourite.3.path))</visible>
 		</control>
@@ -374,12 +417,14 @@
 			<include>ButtonHomeSubCommonValues</include>
 			<label>$INFO[Window(0).Property(favourite.4.name)]</label>
 			<onclick>$INFO[Window(0).Property(favourite.4.path)]</onclick>
+			<onclick>SetProperty(SubMenuBackground,$VAR[SubMenuItemBackground],Home)</onclick>
 			<visible>!IsEmpty(Window(0).Property(favourite.4.name))</visible>
 			<visible>!IsEmpty(Window(0).Property(favourite.4.path))</visible>
 		</control>
 		<control type="button" id="90196">
 			<include>ButtonHomeSubCommonValues</include>
 			<label>$INFO[Window(0).Property(favourite.5.name)]</label>
+			<onclick>SetProperty(SubMenuBackground,$VAR[SubMenuItemBackground],Home)</onclick>
 			<onclick>$INFO[Window(0).Property(favourite.5.path)]</onclick>
 			<visible>!IsEmpty(Window(0).Property(favourite.5.name))</visible>
 			<visible>!IsEmpty(Window(0).Property(favourite.5.path))</visible>
@@ -387,6 +432,7 @@
 		<control type="button" id="90197">
 			<include>ButtonHomeSubCommonValues</include>
 			<label>$INFO[Window(0).Property(favourite.6.name)]</label>
+			<onclick>SetProperty(SubMenuBackground,$VAR[SubMenuItemBackground],Home)</onclick>
 			<onclick>$INFO[Window(0).Property(favourite.6.path)]</onclick>
 			<visible>!IsEmpty(Window(0).Property(favourite.6.name))</visible>
 			<visible>!IsEmpty(Window(0).Property(favourite.6.path))</visible>
@@ -398,12 +444,6 @@
 			<visible>IntegerGreaterThan(Window(Home).Property(favourite.count),0)</visible>
 		</control>
 	</include>
-	
-	
-	
-	
-	
-	
 	<include name="HomeAddonItemsVideos">
 		<item>
 			<label>$INFO[system.addontitle(Skin.String(HomeVideosButton1))]</label>
