@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <addon
   id="skin.confluence.custom.mod"
-  version="1.0.6"
+  version="1.0.7"
   name="Confluence Customizable Mod"
   provider-name="Mudislander">
   <requires>
@@ -11,6 +11,7 @@
 	<import addon="script.tvtunes" version="3.0.4"/>
 	<import addon="script.globalsearch" version="1.1.1"/>
 	<import addon="script.artistslideshow" version="1.5.0"/>
+	<import addon="script.artwork.downloader" version="12.0.15"/>
   </requires>
   <extension
     point="xbmc.gui.skin"
