@@ -1,3 +1,14 @@
+[B]1.0.7[/B]
+- Added Preset Menu Items
+- Added Submenu Set Choices
+- Added Subtitle Flag Option
+- Added Individual Genre Icons
+- Added TVBaners to MediaInfo 3
+- Added Next 5 Song Scroller
+- Added Traditional CD Case & Art Option
+- BugFix Service.Skin.Widgets getting turned off
+- BugFix Zorder & Viz Condition Artwork Downloader
+
 [B]1.0.6[/B]
 - Added Option to Hide Episode Thumbnails
 - Removed SideMenu Help Not Needed as Mod of skin
